--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "devDependencies": {
     "eslint": "^4.2.0",
-    "mocha": "^3.5.0"
+    "mocha": "^3.5.0",
+    "sequelize-mock": "^0.9.0"
   },
   "publishConfig": {
     "registry": "https://camobile.jfrog.io/camobile/api/npm/camplat/"
