--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "eslint": "^4.2.0",
     "mocha": "^3.5.0",
+    "node-mocks-http": "^1.6.4",
     "sequelize-mock": "^0.9.0"
   },
   "publishConfig": {
