--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node.js"
   ],
   "scripts": {
+    "prepush": "npm run test",
     "test": "mocha --reporter spec --ui bdd --timeout 3000 --recursive test"
   },
   "author": "",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "eslint": "^4.2.0",
+    "husky": "^0.14.3",
     "mocha": "^3.5.0",
     "node-mocks-http": "^1.6.4",
     "sequelize-mock": "^0.9.0",
