--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-vironlib",
   "version": "1.3.0",
-  "description": "Generic library for DMC",
+  "description": "Generic library for Viron",
   "keywords": [
     "dmc",
     "viron",
