--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "express-jwt": "^5.3.0",
+    "express-unless": "^0.3.1",
     "googleapis": "^20.1.0",
     "jsonwebtoken": "^7.4.2",
     "mout": "^1.0.0",
