--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-vironlib",
-  "version": "1.6.6",
+  "version": "1.6.7",
   "description": "Generic library for Viron",
   "keywords": [
     "viron",
@@ -21,21 +21,21 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.18.1",
+    "bson": "^4.1.0",
     "express-jwt": "^5.3.1",
     "express-unless": "^0.3.1",
     "googleapis": "^39.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.7",
-    "mout": "^1.0.0",
-    "sequelize": "^5.8.12"
+    "mout": "^1.2.2",
+    "sequelize": "^5.22.0"
   },
   "devDependencies": {
-    "eslint": "^4.2.0",
+    "eslint": "^7.1.0",
     "husky": "^0.14.3",
-    "mocha": "^5.0.0",
+    "mocha": "^7.0.0",
     "node-mocks-http": "^1.7.3",
     "sequelize-mock": "^0.10.2",
-    "sinon": "^3.2.1"
+    "sinon": "^7.5.0"
   },
   "engines": {
     "node": ">= 7.6.0"
